--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,7 @@ dependencies = [
     "ibm-platform-services>=0.22.6",
     "pydantic>=2.5.0,<2.10",
     "qiskit>=1.3.2",
+    "packaging"
 ]
 
 [project.entry-points."qiskit.transpiler.translation"]
