--- a/crates/bindings/Cargo.toml
+++ b/crates/bindings/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 pyo3 = { version = "0.26", features = ["extension-module"] }
 
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
+reqwest = { version = "^0.12", features = ["json", "rustls-tls"] }
 
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
